--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,8 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.10.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.28.2",
+    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.0",
@@ -67,7 +68,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-webpack-plugin": "^4.0.1",
-    "fetch-mock": "^9.11.0",
+    "fetch-mock": "^12.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
